prevent menu from jumping around

--- a/demo/src/components/props-options-wrapper/styles.scss
+++ b/demo/src/components/props-options-wrapper/styles.scss
@@ -41,6 +41,7 @@
     position: absolute;
     right: 0;
     width: 400px;
+    overflow-x: hidden;
 
     .formHeader {
       padding: 12px 12px 16px;
